<resources>
    <string name="app_name">MyWeek6Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_contact">Add Contact</string>
    <string name="add_sur_name">Sur Name</string>
    <string name="add_first_name">First Name</string>
    <string name="add_email">Email</string>
    <string name="add_address">Address</string>
    <string name="add_contact_number">Contact Number</string>
    <string name="save_contact">Save Contact</string>
    <string name="added_contact">Contact has been added successfully</string>
    <string name="error">%1$s</string>
</resources>